--- a/src/styles/layout/_buttons.scss
+++ b/src/styles/layout/_buttons.scss
@@ -1,4 +1,4 @@
-.home-button {
+.home-button, .log-out-button {
 	@extend %flex-box;
 	align-items: center;
 	justify-content: flex-end;
@@ -6,6 +6,14 @@
 	padding-right: 1em;
 	
 }
-.home-button-layout {
+.home-button-layout, .log-out-button {
 	margin-right: 1em;
+}
+@media screen and (max-width: 50em) {
+	.home-button-layout, .log-out-button {
+		margin-top: 1em;
+		justify-content: center;
+		display: flex;
+	}
+
 }
