mobile view work

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,10 @@
 header {
 	background-color: white;
+  @media screen and (max-width: 736px) {
+    header{
+      background-color: green;
+    }
+  }
 	h1 {
 		color: $primary-font-color;
 		margin: 0;
