--- a/src/styles/partials/_admin_view.scss
+++ b/src/styles/partials/_admin_view.scss
@@ -4,11 +4,19 @@
   .admin-nav {
     list-style: none;
     display: inline;
+    @media screen and (max-width: 50em) {
+      margin: 0em;
+      display: block;
+    }
     text-align: center;
     margin-bottom: 3em;
     li {
       display: inline;
       padding-top: 1em;
+      @media screen and (max-width: 50em) {
+      margin: 0em;
+      display: block;
+      }
     }
     a {
       text-decoration: none;
@@ -19,13 +27,10 @@
       text-shadow: 1px 1px 1px #CCCCCC;
     }
   }
-ul li a:hover {
-  color: $highlight;
-  border-bottom: 0.125em solid $primary-font-color;
-
-}
-
-  @media screen and (max-width: 50em) {
+  ul li a:hover {
+    color: $highlight;
+    border-bottom: 0.125em solid $primary-font-color;
 
   }
+
 }
