--- a/src/styles/partials/_contact_view.scss
+++ b/src/styles/partials/_contact_view.scss
@@ -43,9 +43,10 @@
     img{
       margin-top: 1em;
       margin-bottom: 4em;
+      @media screen and (max-width: 50em) {
+        max-width: 90%;
+        max-height: 90%;
+      }
     }
 
-  @media screen and (max-width: 50em) {
-
-  }
 }
