--- a/src/views/admin/addScore/addScore_view.html
+++ b/src/views/admin/addScore/addScore_view.html
@@ -5,22 +5,21 @@
       <thead>
         <tr>
           <td>Home Team:</td>
-          <td>Home Team Score:</td>
+          <td>Score:</td>
           <td>Away Team:</td>
-          <td>Away Team Score:</td>
+          <td>Score:</td>
           <td>Game Date:</td>
           <td></td>
         </tr>
      </thead>
-        <tr data-ng-repeat="game in scoreArray">
+        <tr data-ng-repeat="game in scoreArray | orderBy: '+date'">
           <td>{{game.teams[0].name}}</td>
           <td><input data-ng-model="game.newscore1"></input></td>
           <td>{{game.teams[1].name}}</td>
           <td><input data-ng-model="game.newscore2"></input></td>
-          <td>{{game.date}}</td>
+          <td>{{game.date | date: 'dd-MM-yyyy'}}</td>
           <td>
             <button data-ng-click="addScore(game)">Post</button>
-            <button data-ng-click="cancel(game)">Cancel</button>
           </td>
         </tr>
     </table>
