--- a/src/views/calendar/calendar_view.html
+++ b/src/views/calendar/calendar_view.html
@@ -1,5 +1,16 @@
 <section>
-	<div>
-    <!--calendar jquery plugin goes here-->
+	
+  <div class="radioSection">
+     <input type="radio" name="division" value="A" class="radioA" data-ng-model="division.name" data-ng-change="">
+     <p> Division A </p>
+     <input type="radio" name="division" value="B" class="radioB" data-ng-model="division.name" data-ng-change="">
+     <p> Division B </p>
+  </div>
+  
+  <div data-ng-repeat="game in games">
+    <p>{{game.teams[0].name}} - {{game.teams[1].name}}</p>
+    <p>{{game.teams[0].score}} - {{game.teams[1].score}}</p>
+    <p>{{game.date | date: 'dd/MM/yyyy'}}</p>
+    </br>
   </div>
 </section>
