--- a/src/views/team/register_team_view.html
+++ b/src/views/team/register_team_view.html
@@ -12,7 +12,8 @@
       </section>  
         <section ng-show="t.show" data-ng-repeat="player in t.playersArray">
           <p>{{player.firstname}} {{player.middlename}} {{player.secondname}}</p>
-          <span ng-click="editPlayer(player)">edit-icon</span>
+          
+          <!-- <span ng-click="editPlayer(player)">edit-icon</span>
           <span ng-click="deletePlayer(player)">del-icon</span>
           <p>Email: {{player.email}}</p>
           <p>Phone Number: {{player.phone}}</p>
@@ -22,7 +23,7 @@
           <p>Weight: {{player.weight}}</p>
           <p>Number: {{player.number}}</p>
           <p>Position: {{player.position}}</p>
-          <p>Picture: {{player.img}}</p>
+          <p>Picture: {{player.img}}</p> -->
         </section>  
     </li>
   </ul>
